# cpp-cnam

TP1/: a.out  ex1.cpp  ex2  ex2.cpp  ex3  ex3.cpp
TP2/: CMakeLists.txt
TP2/src/: cercle.cpp  cercle.hpp  main.cpp  point.hpp  rectangle.cpp  rectangle.hpp  triangle.cpp  triangle.hpp
TP3/: CMakeLists.txt  README.md
TP3.2/: CMakeLists.txt  README.md
TP3.2 - Solid/: README.md  game.cpp
TP3.2 - Solid/games/defaults/: defaultGameEvaluator.cpp  defaultGameEvaluator.hpp
TP3.2 - Solid/games/power4/: power4CellRequester.hpp
TP3.2 - Solid/interfaces/: cellRequester.hpp
TP3.2 - Solid/models/: cell.hpp  player.hpp
TP3.2 - Solid/src/: main.cpp  morpion.cpp  puissance4.cpp  square.cpp  token.hpp
TP3.2/src/TP3/: game.hpp  grid.cpp  grid.hpp  main.cpp
TP3.2/src/TP3/games/power4/: power4.cpp  power4.hpp  power4CellRequester.cpp
TP3.2/src/TP3/interfaces/: gameEvaluator.hpp
TP3.2/src/TP3/shared/: functions.cpp  functions.hpp
TP3/src/: game.cpp  game.hpp  main.cpp  morpion.cpp  morpion.hpp  player.cpp  player.hpp  puissance4.cpp  puissance4.hpp  square.cpp  square.hpp  token.cpp  token.hpp
testQT/Main/: CMakeLists.txt  main.cpp
testQT/build-Main-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
testQT/build-Main-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
testQT/build-Main-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
testQT/build-Main-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/Main_autogen/: deps
(+306 files in other folders)
