cmake_minimum_required(VERSION 3.16)

project(cpp-tp3)

add_executable(tp3
    src/game.cpp
    src/game.hpp
    src/main.cpp
    src/morpion.cpp
    src/morpion.hpp
    src/puissance4.hpp
    src/puissance4.cpp
    src/player.cpp
    src/player.hpp
    src/square.hpp
    src/square.cpp
    src/token.cpp
    src/token.hpp
)
